# wireframe-mcp

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  __main__.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.agent/: launch.ps1
.agent/rules/: cli-usage.md  git-commit.md  meta-rules.md  py-imports.md  py-module.md  py-style.md  py-testing.md  repo-rules.md
.agent/scripts/: _branch-selector.ps1  _env-setup.ps1  claude-launch.ps1  launch.ps1  shortcut.ps1
.agent/workflows/: commit.md  create-feature.md  merge-main.md
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: commit.md  create-feature.md  merge-main.md  new-branch.md  ruff-and-push.md
.corpus/: index.faiss  index.meta.json  index.store.json
.corpus/websight/: websight_samples.jsonl
.githooks/: pre-commit
.github/workflows/: test.yml
deep_testing/: full_stack_test.py  kitchen_sink.py  salt_features_check.py  stress_test.py  style_test.py  transpiler_stress.py  workbench.py
docker/: Dockerfile  __init__.py  compose.base.yml  compose.core.yml  compose.hotreload.yml  compose.production.yml  compose.renderer.yml  docker-compose.dev.yml  docker-compose.kroki.yml  docker-compose.prod.yml  docker-compose.yml  lib.py  test.py
docs/: SUMMARY.md  architecture.md  corpus-normalization-research.md  design-investigation.md
docs/plans/: 2026-01-20-mcp-audit-implementation.md  2026-01-20-mcp-audit-plan.md  2026-01-21-gpu-indexing-cli.md  2026-01-22-cli-environment-audit.md  2026-01-22-cli-environment-implementation.md  2026-01-22-interaction-logging-tier.md  (+1 more)
scripts/: audit_corpus.py  audit_egfe.py  audit_enrico.py  audit_normalizer.py  audit_rico.py  audit_rico_deep.py  audit_showui.py  audit_websight.py  build-full-index.sh  build_index.py  demo_render.py  generate_e2e_results.py  prepare_sample.py  test_vector_index.py  verify_sizing.py
src/: __init__.py
src/config/: lib.py  (+2 more)
temp/: agentic-mode-design.md  cli-to-mcp-mapping.md  example-comparison.txt  history-manager-design.md  mcp-testing-strategy.md  mcp-workflow-design.md  provider-capability-audit.md  refactor-plan.md  research-fastmcp.md  task.md
tests/: __init__.py
(+177 files in other folders)
