[project]
name = "wireframe-mcp"
version = "0.1.0"
description = "Wireframe MCP Server"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pytest",
    "ruff",
]

[tool.ruff]
# Same as Black.
line-length = 88

# Target Python 3.12
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".venv-win",
    "venv",
    "venv-win",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "B", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]
